[gd_scene load_steps=18 format=2]

[ext_resource path="res://Art/Backgrounds/bedroom_closed.png" type="Texture" id=1]
[ext_resource path="res://Scripts/VNSceneHandler.gd" type="Script" id=2]
[ext_resource path="res://Art/Sprites/Expressions/expression_player_neutral.png" type="Texture" id=3]
[ext_resource path="res://UI/UI Assets/dialogue_base.png" type="Texture" id=4]
[ext_resource path="res://Art/Sprites/sprite_bestie_neutral.png" type="Texture" id=5]
[ext_resource path="res://Scripts/TextBox.gd" type="Script" id=8]
[ext_resource path="res://Scripts/textBoxMenu.gd" type="Script" id=10]
[ext_resource path="res://Font/Ubuntu-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://UI/UI Assets/choices_base_three.png" type="Texture" id=12]
[ext_resource path="res://Scripts/TextHover.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 11 )

[sub_resource type="StreamTexture" id=10]
flags = 4
load_path = "res://.import/dialogue_frame.png-e71af5bf29dcb9473818720a651b1e24.stex"

[sub_resource type="DynamicFontData" id=13]
font_path = "res://Font/Ubuntu-Regular.ttf"

[sub_resource type="DynamicFont" id=12]
size = 34
font_data = SubResource( 13 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 11 )

[node name="BaseTexture" type="TextureRect"]
texture = ExtResource( 1 )
script = ExtResource( 10 )

[node name="Scene" type="Control" parent="." groups=["DialogueController"]]
margin_left = 18.8883
margin_right = 58.8883
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}
start_id = "ROOM"

[node name="Sprite" type="Sprite" parent="Scene"]
position = Vector2( 1010.11, 552 )
texture = ExtResource( 5 )

[node name="TextBox" type="TextureRect" parent="Scene"]
anchor_left = 3.22779
anchor_top = 8.475
anchor_right = 3.22779
anchor_bottom = 8.475
margin_left = 104.0
margin_top = 413.0
margin_right = 1725.0
margin_bottom = 742.0
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 4 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="tboxSpeaking" type="Sprite" parent="Scene/TextBox"]
position = Vector2( 327.994, 162.628 )
scale = Vector2( 0.990072, 0.990072 )
texture = ExtResource( 3 )

[node name="Dialogue" type="RichTextLabel" parent="Scene/TextBox"]
margin_left = 451.0
margin_top = 24.0
margin_right = 1582.0
margin_bottom = 307.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="Scene/TextBox"]
playback_speed = 2.0
playback/speed = 2.0

[node name="Frame" type="TextureRect" parent="Scene/TextBox"]
margin_top = -66.6666
margin_right = 1621.0
margin_bottom = 328.333
texture = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Container" type="HBoxContainer" parent="Scene/TextBox"]
margin_left = 986.0
margin_top = -56.0
margin_right = 1546.0
margin_bottom = -6.0
custom_constants/separation = 10

[node name="savebutton" type="TextureButton" parent="Scene/TextBox/Container"]
margin_right = 130.0
margin_bottom = 50.0
rect_min_size = Vector2( 130, 0 )

[node name="save" type="Label" parent="Scene/TextBox/Container/savebutton"]
margin_left = 23.9999
margin_top = 5.0
margin_right = 116.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
custom_fonts/font = SubResource( 12 )
text = "SAVE"
align = 1
valign = 1

[node name="loadbutton" type="TextureButton" parent="Scene/TextBox/Container"]
margin_left = 140.0
margin_right = 270.0
margin_bottom = 50.0
rect_min_size = Vector2( 130, 0 )

[node name="load" type="Label" parent="Scene/TextBox/Container/loadbutton"]
margin_left = 19.5001
margin_top = 5.0
margin_right = 110.5
margin_bottom = 44.0
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
custom_fonts/font = SubResource( 12 )
text = "LOAD"
align = 1
valign = 1

[node name="histbutton" type="TextureButton" parent="Scene/TextBox/Container"]
margin_left = 280.0
margin_right = 410.0
margin_bottom = 50.0
rect_min_size = Vector2( 130, 50 )

[node name="hist" type="Label" parent="Scene/TextBox/Container/histbutton"]
margin_left = 26.0
margin_top = 5.0
margin_right = 104.0
margin_bottom = 44.0
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
custom_fonts/font = SubResource( 12 )
text = "HIST."
align = 1
valign = 1

[node name="menuButton" type="TextureButton" parent="Scene/TextBox/Container"]
margin_left = 420.0
margin_right = 550.0
margin_bottom = 50.0
rect_min_size = Vector2( 130, 50 )

[node name="menu" type="Label" parent="Scene/TextBox/Container/menuButton"]
margin_left = 16.4999
margin_top = 5.0
margin_right = 113.5
margin_bottom = 44.0
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
custom_fonts/font = SubResource( 12 )
text = "MENU"
align = 1
valign = 1

[node name="Position" type="Node2D" parent="Scene"]

[node name="1" type="Position2D" parent="Scene/Position"]
position = Vector2( 270, 552 )

[node name="2" type="Position2D" parent="Scene/Position"]
position = Vector2( 751, 552 )

[node name="3" type="Position2D" parent="Scene/Position"]
position = Vector2( 1279, 552 )

[node name="4" type="Position2D" parent="Scene/Position"]
position = Vector2( 1683, 552 )

[node name="Choices" type="TextureRect" parent="Scene"]
visible = false
anchor_left = 1.22779
anchor_top = 0.3
anchor_right = 1.22779
anchor_bottom = 0.3
margin_left = 233.0
margin_top = 138.0
margin_right = 1596.0
margin_bottom = 557.0
texture = ExtResource( 12 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Choice 1" type="RichTextLabel" parent="Scene/Choices"]
margin_left = 57.5
margin_top = 20.5
margin_right = 1315.5
margin_bottom = 123.5
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true

[node name="TextureButton" type="TextureButton" parent="Scene/Choices/Choice 1"]
margin_left = -46.0
margin_top = -8.0
margin_right = 1294.0
margin_bottom = 110.0

[node name="Choice 2" type="RichTextLabel" parent="Scene/Choices"]
margin_left = 50.5
margin_top = 158.0
margin_right = 1308.5
margin_bottom = 261.0
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true

[node name="TextureButton2" type="TextureButton" parent="Scene/Choices/Choice 2"]
margin_left = -40.0
margin_top = -10.0
margin_right = 1301.0
margin_bottom = 112.0

[node name="Choice 3" type="RichTextLabel" parent="Scene/Choices"]
margin_left = 54.5
margin_top = 295.0
margin_right = 1312.5
margin_bottom = 398.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true

[node name="TextureButton3" type="TextureButton" parent="Scene/Choices/Choice 3"]
margin_left = -43.0
margin_top = -9.0
margin_right = 1298.0
margin_bottom = 113.0

[connection signal="mouse_entered" from="Scene/TextBox" to="Scene/TextBox" method="_on_TextBox_mouse_entered"]
[connection signal="mouse_exited" from="Scene/TextBox" to="Scene/TextBox" method="_on_TextBox_mouse_exited"]
[connection signal="mouse_off_tbox" from="Scene/TextBox" to="Scene" method="_on_TextBox_mouse_off_tbox"]
[connection signal="mouse_over_tbox" from="Scene/TextBox" to="Scene" method="_on_TextBox_mouse_over_tbox"]
[connection signal="tween_completed" from="Scene/TextBox/Tween" to="Scene" method="_on_Tween_tween_completed"]
[connection signal="pressed" from="Scene/TextBox/Container/savebutton" to="." method="_on_savebutton_pressed"]
[connection signal="pressed" from="Scene/TextBox/Container/loadbutton" to="." method="_on_loadbutton_pressed"]
[connection signal="pressed" from="Scene/TextBox/Container/histbutton" to="." method="_on_histbutton_pressed"]
[connection signal="pressed" from="Scene/TextBox/Container/menuButton" to="." method="_on_menuButton_pressed"]
[connection signal="mouse_entered" from="Scene/Choices/Choice 1/TextureButton" to="Scene/Choices" method="_on_TextureButton_mouse_entered" binds= [ "Choice 1" ]]
[connection signal="mouse_exited" from="Scene/Choices/Choice 1/TextureButton" to="Scene/Choices" method="_on_TextureButton_mouse_exited" binds= [ "Choice 1" ]]
[connection signal="pressed" from="Scene/Choices/Choice 1/TextureButton" to="Scene" method="_pressed" binds= [ "0" ]]
[connection signal="mouse_entered" from="Scene/Choices/Choice 2/TextureButton2" to="Scene/Choices" method="_on_TextureButton_mouse_entered" binds= [ "Choice 2" ]]
[connection signal="mouse_exited" from="Scene/Choices/Choice 2/TextureButton2" to="Scene/Choices" method="_on_TextureButton_mouse_exited" binds= [ "Choice 2" ]]
[connection signal="pressed" from="Scene/Choices/Choice 2/TextureButton2" to="Scene" method="_pressed" binds= [ "1" ]]
[connection signal="mouse_entered" from="Scene/Choices/Choice 3/TextureButton3" to="Scene/Choices" method="_on_TextureButton_mouse_entered" binds= [ "Choice 3" ]]
[connection signal="mouse_exited" from="Scene/Choices/Choice 3/TextureButton3" to="Scene/Choices" method="_on_TextureButton_mouse_exited" binds= [ "Choice 3" ]]
[connection signal="pressed" from="Scene/Choices/Choice 3/TextureButton3" to="Scene" method="_pressed" binds= [ "2" ]]
